updated readme for running the application